--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Restaurant</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Hubballi&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style/restaurant.css">
 </head>
+
 <body>
     <header>
         <section id="banner">
             <div class="banner-content">
                 <p class="sub-title">Savor the Flavors</p>
                 <h1 class="heading">Experience Culinary Excellence Food</h1>
-                <p class="descrip">Indulge in an extraordinary dining experience where flavors come to life. Discover a fusion of taste, creativity, and culinary mastery, crafted with passion and precision. From gourmet dishes to exquisite presentations, every bite is a celebration of excellence. Elevate your palate and savor the artistry of world-class cuisine.
+                <p class="descrip">Indulge in an extraordinary dining experience where flavors come to life. Discover a
+                    fusion of taste, creativity, and culinary mastery, crafted with passion and precision. From gourmet
+                    dishes to exquisite presentations, every bite is a celebration of excellence. Elevate your palate
+                    and savor the artistry of world-class cuisine.
 
-</p>
-                <button class="cta">Shop The Hotest Food</button>
+                </p>
+                <div class="cta-container">
+                   <button class="cta">
+                    Shop The Hotest Food
+                   </button>
+                </div>
             </div>
         </section>
     </header>
     <main></main>
     <footer></footer>
-    
+
 </body>
+
 </html>
