--- a/index.html
+++ b/index.html
@@ -22,14 +22,28 @@
 
                 </p>
                 <div class="cta-container">
-                   <button class="cta">
-                    Shop The Hotest Food
-                   </button>
+                    <button class="cta">
+                        Shop The Hotest Food
+                    </button>
                 </div>
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="card">
+                <div><img src="/assets/pizza.png" alt="Pizza"></div>
+                <button>Pizza Burg</button>
+                <h1>Up To 50% Off </h1>
+                <p>Satisfy your cravings with Pizza Burg’s irresistible offer!
+                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
+                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
+
+                </p>
+            </div>
+        </section>
+
+    </main>
     <footer></footer>
 
 </body>
