--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 </p>
                 <div class="cta-container">
-                    <button class="cta">
+                    <button class="cta-1">
                         Shop The Hotest Food
                     </button>
                 </div>
@@ -30,17 +30,41 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class="card-box card-box-container">
+            <p class="Fav-Restaurant">Favorite Restaurant</p>
+            <h1 class="Fav-Food">Your Favorite Restaurants' Foods Are On Sale🔥</h1>
             <div class="card">
-                <div><img src="/assets/pizza.png" alt="Pizza"></div>
-                <button>Pizza Burg</button>
-                <h1>Up To 50% Off </h1>
-                <p>Satisfy your cravings with Pizza Burg’s irresistible offer!
+                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
+                <button class="cta-2">Pizza Burg</button>
+                <h1 class="discount-text">Up To 50% Off </h1>
+                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
                     Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
                     for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
 
                 </p>
             </div>
+            <div class="card">
+                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
+                <button class="cta-2">Pizza Burg</button>
+                <h1 class="discount-text">Up To 50% Off </h1>
+                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
+                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
+                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
+
+                </p>
+            </div>
+            <div class="card">
+                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
+                <button class="cta-2">Pizza Burg</button>
+                <h1 class="discount-text">Up To 50% Off </h1>
+                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
+                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
+                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
+
+                </p>
+            </div>
+
+            
         </section>
 
     </main>
