--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 </p>
                 <div class="cta-container">
-                    <button class="cta-1">
+                    <button class="cta">
                         Shop The Hotest Food
                     </button>
                 </div>
@@ -30,43 +30,52 @@
         </section>
     </header>
     <main>
-        <section class="card-box card-box-container">
-            <p class="Fav-Restaurant">Favorite Restaurant</p>
-            <h1 class="Fav-Food">Your Favorite Restaurants' Foods Are On Sale🔥</h1>
-            <div class="card">
-                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
-                <button class="cta-2">Pizza Burg</button>
-                <h1 class="discount-text">Up To 50% Off </h1>
-                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
-                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
-                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
+        <section id="card-box"> 
+            <div class="container">
+                <div>
+                    <p class="subtitle">Favorite Restaurant</p>
+                    <h1 class="title">Your Favorite Restaurants' Food Are On Sale🔥</h1>
+                </div>
 
-                </p>
+                <div class="card-container">
+                    <div class="card adjust">
+                        <div class="image-box"><img src="assets/pizza.png" alt=""></div>
+                        <div class="cta pointer"><span>Pizza Burg</span></div>
+                        <h1>Up To 50% Off</h1>
+                        <p class="restaurantdescription">Satisfy your cravings with Pizza Burg’s irresistible
+                            offer!.Don’t miss out on this
+                            mouthwatering
+                            deal—grab a bite, indulge in bold flavors, and treat yourself for less. Limited time only,
+                            so
+                            hurry in and savor the savings! 🍕🍔🔥
+                        </p>
+
+                    </div>
+                    <div class="card">
+                        <div class="image-box"><img src="assets/biriyani.png" alt=""></div>
+                        <div class="cta pointer"><span>Kacchi Bhai</span></div>
+                        <h1>Up To 50% Off</h1>
+                        <p class="restaurantdescription">Get ready for a feast fit for a foodie! At Kacchi Bhai, enjoy
+                            your favorite aromatic kacchi biryani and delicious desi delights. Savor authentic flavors,
+                            indulge in rich spices, and treat yourself for half the price.
+                            Hurry—this special offer won’t last forever!🔥🥘
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="image-box"><img src="assets/burger.png" alt=""></div>
+                        <div class="cta pointer"><span>Burger King</span></div>
+                        <h1>Up To 50% Off</h1>
+                        <p class="restaurantdescription">Get ready for a royal feast at Burger King!🍔👑 Enjoy up to **50% off** on your
+                            favorite flame-grilled burgers and crispy sides. Whether you're craving a Whopper or a
+                            cheesy delight, this deal is too good to miss. Hurry in and grab your discounted bite before
+                            it's gone! 🔥🍟
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="card">
-                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
-                <button class="cta-2">Pizza Burg</button>
-                <h1 class="discount-text">Up To 50% Off </h1>
-                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
-                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
-                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
+            <div class="adjust2"><p class="cta">See More</p></div>
 
-                </p>
-            </div>
-            <div class="card">
-                <div class="rectangle"><img src="/assets/pizza.png" alt="Pizza"></div>
-                <button class="cta-2">Pizza Burg</button>
-                <h1 class="discount-text">Up To 50% Off </h1>
-                <p class="restaurant-brief">Satisfy your cravings with Pizza Burg’s irresistible offer!
-                    Don’t miss out on this mouthwatering deal—grab a bite, indulge in bold flavors, and treat yourself
-                    for less. Limited time only, so hurry in and savor the savings! 🍕🍔🔥
-
-                </p>
-            </div>
-
-            
         </section>
-
     </main>
     <footer></footer>
 
