deleted easy.html and style.css file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
     </header>
     <main>
-        <section id="card-box"> 
+        <section id="card-box">
             <div class="container">
                 <div>
                     <p class="subtitle">Favorite Restaurant</p>
@@ -65,7 +65,8 @@
                         <div class="image-box"><img src="assets/burger.png" alt=""></div>
                         <div class="cta pointer"><span>Burger King</span></div>
                         <h1>Up To 50% Off</h1>
-                        <p class="restaurantdescription">Get ready for a royal feast at Burger King!🍔👑 Enjoy up to **50% off** on your
+                        <p class="restaurantdescription">Get ready for a royal feast at Burger King!🍔👑 Enjoy up to
+                            **50% off** on your
                             favorite flame-grilled burgers and crispy sides. Whether you're craving a Whopper or a
                             cheesy delight, this deal is too good to miss. Hurry in and grab your discounted bite before
                             it's gone! 🔥🍟
@@ -73,7 +74,9 @@
                     </div>
                 </div>
             </div>
-            <div class="adjust2"><p class="cta">See More</p></div>
+            <div class="adjust2">
+                <p class="cta">See More</p>
+            </div>
 
         </section>
     </main>
